Added SearchReport Functionality

--- a/MaintenanceSystem/src/msystem/MainPage.form
+++ b/MaintenanceSystem/src/msystem/MainPage.form
@@ -670,6 +670,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Search"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="reportSearchBtnMouseClicked"/>
+                  </Events>
                 </Component>
                 <Container class="javax.swing.JScrollPane" name="jScrollPane5">
                   <AuxValues>
