--- a/MaintenanceSystem/src/msystem/UserAuth.form
+++ b/MaintenanceSystem/src/msystem/UserAuth.form
@@ -77,6 +77,7 @@
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tempNextPageMouseClicked"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tempNextPageActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
@@ -103,6 +104,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JPasswordField" name="jpfPassword">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jpfPasswordActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
