--- a/MaintenanceSystem/src/msystem/MainPage.form
+++ b/MaintenanceSystem/src/msystem/MainPage.form
@@ -622,6 +622,8 @@
                                       </Group>
                                       <Group type="102" attributes="0">
                                           <EmptySpace max="32767" attributes="0"/>
+                                          <Component id="reportAddButton" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Component id="reportLoadAllBtn" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Component id="reportPrint" min="-2" max="-2" attributes="0"/>
@@ -654,6 +656,7 @@
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="reportPrint" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="reportLoadAllBtn" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="reportAddButton" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                       </Group>
@@ -688,7 +691,11 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Cascadia Code" size="12" style="0"/>
                     </Property>
+                    <Property name="text" type="java.lang.String" value="User ID"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="reportSearchFieldFocusGained"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="reportSearchBtn">
                   <Properties>
@@ -711,6 +718,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Cascadia Code" size="12" style="0"/>
                         </Property>
+                        <Property name="lineWrap" type="boolean" value="true"/>
                         <Property name="rows" type="int" value="5"/>
                       </Properties>
                     </Component>
@@ -730,6 +738,14 @@
                   </Properties>
                   <Events>
                     <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="reportLoadAllBtnMouseClicked"/>
+                  </Events>
+                </Component>
+                <Component class="javax.swing.JButton" name="reportAddButton">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Add"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="reportAddButtonMouseClicked"/>
                   </Events>
                 </Component>
               </SubComponents>
